# chipathon-hub

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  hf_readme.md  index.html  pyproject.toml  sitemap.xml  tags.json
.github/workflows/: deploy-api.yml  deploy-hub.yml
artifact-map/: index.html
artifacts/file-types/: index.html
artifacts/logs/: index.html
artifacts/metrics/: index.html
assets/: chatbot.js
chatbot/: api.py  cli.py  index.html  rag_chain.py  retriever.py
chatbot/eval/: __init__.py  eval_harness.py  questions.json
chatbot/ingest/: __init__.py  chunker.py  embedder.py  scraper.py
conduct/: index.html
debugging/: index.html
debugging/drc/: index.html
debugging/environment/: index.html
debugging/routing/: index.html
debugging/timing/: index.html
faq/: index.html
faq/chipathon-history/: index.html
faq/snippets/: index.html
fundamentals/orfs-intro/: index.html
fundamentals/pipeline/: index.html
getting-started/: index.html
getting-started/ams/: index.html
getting-started/digital/: index.html
getting-started/env-setup/: index.html
getting-started/environment-setup/: index.html
getting-started/first-flow/: index.html
getting-started/track-overview/: index.html
hub/: mkdocs.yml
hub/docs/: artifact-map.md  chatbot.md  conduct.md  faq.md  index.md
maintainers/contributor-guide/: index.html
maintainers/tagging/: index.html
openroad-flow/: index.html
openroad-flow/configuration/: index.html
openroad-flow/flow-stages/: index.html
search/: search_index.json
submission/checklist/: index.html
(+29 files in other folders)
